[package]
name = "code_laughs_api"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "API with programming memes"
authors = [".nXoji <https://github.com/nXoji/CodeLaughs-API>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
dotenv = "0.15.0"
reqwest = "0.11.14"
serde_json = "1.0.93"
rand = "0.8.5"
uuid = "1.3.3"
mongodb = "2.5.0"
